First pass at testing policy file